OGP に画像追加

--- a/assessment.html
+++ b/assessment.html
@@ -12,6 +12,7 @@
       property="og:description"
       content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。"
     >
+    <meta property="og:image" content="./teacher.jpg" />
     <link rel="stylesheet" href="assessment.css">
     <title>dhshibataが作ったあなたのいいところ診断</title>
 </head>
@@ -26,5 +27,6 @@
 </body>
 
 </html>
+
 
 
