--- a/assessment.html
+++ b/assessment.html
@@ -12,7 +12,7 @@
       property="og:description"
       content="ZEN Study Web アプリケーション開発コースで制作した、「あなたのいいところ診断」サイトです。"
     >
-    <meta property="og:image" content="https://dhshibata.github.io/assessment2/teacher.jpg" />
+    <meta property="og:image" content="https://dhshibata.github.io/assessment2/teacher.png" />
     <link rel="stylesheet" href="assessment.css">
     <title>dhshibataが作ったあなたのいいところ診断</title>
 </head>
@@ -27,6 +27,7 @@
 </body>
 
 </html>
+
 
 
 
